--- a/public/index.html
+++ b/public/index.html
@@ -51,13 +51,13 @@
 </header>
 <main>
   <div id="sync1" class="owl-carousel owl-theme">
-    <div class="item"><p class="container-text bold writing" data-text="bodom">bodom</p></div>
-    <div class="item"><p class="container-text bold writing" data-text="bodom1">bodom1</p></div>
-    <div class="item"><p class="container-text bold writing" data-text="bodom2">bodom2</p></div>
-    <div class="item"><p class="container-text bold writing" data-text="bodom3">bodom3</p></div>
-    <div class="item"><p class="container-text bold writing" data-text="bodom4">bodom4</p></div>
-    <div class="item"><p class="container-text bold writing" data-text="bodom5">bodom5</p></div>
-    <div class="item"><p class="container-text bold writing" data-text="bodom6">bodom6</p></div>
+    <div class="item am_burger"><p class="container-text bold writing" data-text="Amerykański burger">Amerykański burger</p></div>
+    <div class="item bodom"><p class="container-text bold writing" data-text="bodom">Bodom</p></div>
+    <div class="item express"><p class="container-text bold writing" data-text="Zombie express">Zombie express</p></div>
+    <div class="item klatwa"><p class="container-text bold writing" data-text="Klątwa Śpiącek Królewny">Klątwa Śpiącek Królewny</p></div>
+    <div class="item atak"><p class="container-text bold writing" data-text="Atak krwiożerczych donatów">Atak krwiożerczych donatów</p></div>
+    <div class="item side"><p class="container-text bold writing" data-text="Pod mroczną górą">Pod mroczną górą</p></div>
+    <div class="item lament"><p class="container-text bold writing" data-text="Lament">Lament</p></div>
   </div>
 
   <div id="sync2" class="owl-carousel owl-theme">
@@ -71,7 +71,7 @@
     </div>
     <!-- ZOMBIE EXPRESS -->
     <div class="item">
-      <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+      <img src="./img/movies/zombie.jpg" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more" data-popup-movie="zombie">czytaj wiecej</div>
       <div class="movie_more_black"></div>
     </div>
@@ -92,7 +92,7 @@
     </div>
     <!-- LAMENT -->
     <div class="item">
-      <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+      <img src="./img/movies/lament.jpg" class="shot_movie" role="presentation" alt="#" />
       <div class="movie_more" data-popup-movie="lament">czytaj wiecej</div>
       <div class="movie_more_black"></div>
     </div>
@@ -173,14 +173,14 @@
         <!-- 3 -->
         <li class="one_shot_movie" data-popup-open="zombie">
           <p class="name_movie bold">ZOMBIE EXPRESS</p>
-          <img src="./img/movies/bodom.png" class="shot_movie" role="presentation" alt="#" />
+          <img src="./img/movies/zombie.jpg" class="shot_movie" role="presentation" alt="#" />
         </li>
         <!-- 4 -->
         <li class="one_shot_movie" data-popup-open="lament">
           <p class="name_movie bold">
             Lament
           </p>
-          <img src="./img/movies/burger.png" class="shot_movie" role="presentation" alt="#" />
+          <img src="./img/movies/lament.jpg" class="shot_movie" role="presentation" alt="#" />
         </li>
         <!-- 5 -->
         <li class="one_shot_movie" data-popup-open="ksk">
@@ -344,7 +344,7 @@
           <div class="pop_up_left">
             <img src="img/movies/burger.png" class="pop_up_image" alt="AMERYKAŃSKI BURGER" role="presentation" />
             <div class="pop_up_buttons">
-              <a href="" class="pop_up_view open_pop_up_video" data-youtube="bodom">zobacz zwiastun</a>
+              <a href="" class="pop_up_view open_pop_up_video" data-youtube="am_burger">zobacz zwiastun</a>
             </div>
           </div>
           <div class="pop_up_right">
@@ -381,72 +381,72 @@
             <div class="movie_skin cont">
               <div class="demo-gallery">
                 <ul class="lightgallery">
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_01.jpg 375, ./img/gallery/bodom/Bodom_01.jpg 480, ./img/gallery/bodom/Bodom_01.jpg 800" data-src="./img/gallery/bodom/Bodom_01.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_01.png 375, ./img/gallery/burger/AMBU_01.png 480, ./img/gallery/burger/AMBU_01.png 800" data-src="./img/gallery/burger/AMBU_01.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_01.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_01.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  2 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_02.jpg 375, ./img/gallery/bodom/Bodom_02.jpg 480, ./img/gallery/bodom/Bodom_02.jpg 800" data-src="./img/gallery/bodom/Bodom_02.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_02.png 375, ./img/gallery/burger/AMBU_02.png 480, ./img/gallery/burger/AMBU_02.png 800" data-src="./img/gallery/burger/AMBU_02.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_02.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_03.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  3 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_03.jpg 375, ./img/gallery/bodom/Bodom_03.jpg 480, ./img/gallery/bodom/Bodom_03.jpg 800" data-src="./img/gallery/bodom/Bodom_03.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_03.png 375, ./img/gallery/burger/AMBU_03.png 480, ./img/gallery/burger/AMBU_03.png 800" data-src="./img/gallery/burger/AMBU_03.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_03.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_03.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  4 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_04.jpg 375, ./img/gallery/bodom/Bodom_04.jpg 480, ./img/gallery/bodom/Bodom_04.jpg 800" data-src="./img/gallery/bodom/Bodom_04.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_04.png 375, ./img/gallery/burger/AMBU_04.png 480, ./img/gallery/burger/AMBU_04.png 800" data-src="./img/gallery/burger/AMBU_04.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_04.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_04.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  5 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_05.jpg 375, ./img/gallery/bodom/Bodom_05.jpg 480, ./img/gallery/bodom/Bodom_05.jpg 800" data-src="./img/gallery/bodom/Bodom_05.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_06.png 375, ./img/gallery/burger/AMBU_06.png 480, ./img/gallery/burger/AMBU_06.png 800" data-src="./img/gallery/burger/AMBU_06.png.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_05.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_06.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  6 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_06.jpg 375, ./img/gallery/bodom/Bodom_06.jpg 480, ./img/gallery/bodom/Bodom_06.jpg 800" data-src="./img/gallery/bodom/Bodom_06.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_09.png 375, ./img/gallery/burger/AMBU_09.png 480, ./img/gallery/burger/AMBU_09.png 800" data-src="./img/gallery/burger/AMBU_09.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_06.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_09.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  7 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_07.jpg 375, ./img/gallery/bodom/Bodom_07.jpg 480, ./img/gallery/bodom/Bodom_07.jpg 800" data-src="./img/gallery/bodom/Bodom_07.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_10.png 375, ./img/gallery/burger/AMBU_10.png 480, ./img/gallery/burger/AMBU_10.png 800" data-src="./img/gallery/burger/AMBU_10.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_07.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_10.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Am.Burger  8 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/bodom/Bodom_09.jpg 375, ./img/gallery/bodom/Bodom_09.jpg 480, ./img/gallery/bodom/Bodom_09.jpg 800" data-src="./img/gallery/bodom/Bodom_09.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/burger/AMBU_12.png 375, ./img/gallery/burger/AMBU_12.png 480, ./img/gallery/burger/AMBU_12.png800" data-src="./img/gallery/burger/AMBU_12.png">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/bodom/Bodom_09.jpg" />
+                      <img class="img-responsive" src="./img/gallery/burger/AMBU_12.png" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
@@ -833,7 +833,7 @@
           185.615,206.828 350.018,371.23 371.23,350.018 206.828,185.615 "/>
         </svg>
           <div class="pop_up_left">
-            <img src="img/movies/bodom.png" class="pop_up_image" alt="#" role="presentation" />
+            <img src="img/movies/zombie.jpg" class="pop_up_image" alt="#" role="presentation" />
             <div class="pop_up_buttons">
               <a href="" class="pop_up_view open_pop_up_video" data-youtube="zombie">zobacz zwiastun</a>
             </div>
@@ -878,72 +878,72 @@
             <div class="movie_skin cont">
               <div class="demo-gallery">
                 <ul class="lightgallery">
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_2.jpg 375, ./img/gallery/ksk/curse_2.jpg 480, ./img/gallery/ksk/curse_2.jpg 800" data-src="./img/gallery/ksk/curse_2.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(21).jpg 375, ./img/gallery/zombie/0812(21).jpg 480, ./img/gallery/zombie/0812(21).jpg 800" data-src="./img/gallery/zombie/0812(21).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_2.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(21).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 2 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_3.jpg 375, ./img/gallery/ksk/curse_3.jpg 480, ./img/gallery/ksk/curse_3.jpg 800" data-src="./img/gallery/ksk/curse_3.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(22).jpg 375, ./img/gallery/zombie/0812(22).jpg 480, ./img/gallery/zombie/0812(22).jpg 800" data-src="./img/gallery/zombie/0812(22).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_3.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(22).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 3 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_4.jpg 375, ./img/gallery/ksk/curse_4.jpg 480, ./img/gallery/ksk/curse_4.jpg 800" data-src="./img/gallery/ksk/curse_4.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(23).jpg 375, ./img/gallery/zombie/0812(23).jpg 480, ./img/gallery/zombie/0812(23).jpg 800" data-src="./img/gallery/zombie/0812(23).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_4.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(23).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 4 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_5 375, ./img/gallery/ksk/curse_5.jpg 480, ./img/gallery/ksk/curse_5.jpg 800" data-src="./img/gallery/ksk/curse_5.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(24).jpg 375, ./img/gallery/zombie/0812(24).jpg 480, ./img/gallery/zombie/0812(24).jpg 800" data-src="./img/gallery/zombie/0812(24).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_5.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(24).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 5 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_6.jpeg 375, ./img/gallery/ksk/curse_6.jpeg 480, ./img/gallery/ksk/curse_6.jpeg 800" data-src="./img/gallery/ksk/curse_6.jpeg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(25).jpg 375, ./img/gallery/zombie/0812(25).jpg 480, ./img/gallery/zombie/0812(25).jpg 800" data-src="./img/gallery/zombie/0812(25).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_6.jpeg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(25).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 6 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_7.jpg 375, ./img/gallery/ksk/curse_7.jpg 480, ./img/gallery/ksk/curse_7.jpg 800" data-src="./img/gallery/ksk/curse_7.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(26).jpg 375, ./img/gallery/zombie/0812(26).jpg 480, ./img/gallery/zombie/0812(26).jpg 800" data-src="./img/gallery/zombie/0812(26).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_7.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(26).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 7 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_8.jpg 375, ./img/gallery/ksk/curse_8.jpg 480, ./img/gallery/ksk/curse_8.jpg 800" data-src="./img/gallery/ksk/curse_8.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(27).jpg 375, ./img/gallery/zombie/0812(27).jpg 480, ./img/gallery/zombie/0812(27).jpg 800" data-src="./img/gallery/zombie/0812(27).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_8.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(27).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 8 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_9.jpg 375, ./img/gallery/ksk/curse_9.jpg 480, ./img/gallery/ksk/curse_9.jpg 800" data-src="./img/gallery/ksk/curse_9.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/zombie/0812(33).jpg 375, ./img/gallery/ksk/curse_9.jpg 480, ./img/gallery/zombie/0812(33).jpg 800" data-src="./img/gallery/zombie/0812(33).jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_9.jpg" />
+                      <img class="img-responsive" src="./img/gallery/zombie/0812(33).jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
