--- a/public/index.html
+++ b/public/index.html
@@ -965,7 +965,7 @@
           185.615,206.828 350.018,371.23 371.23,350.018 206.828,185.615 "/>
         </svg>
           <div class="pop_up_left">
-            <img src="img/movies/burger.png" class="pop_up_image" alt="#" role="presentation" />
+            <img src="img/movies/lament.jpg" class="pop_up_image" alt="#" role="presentation" />
             <div class="pop_up_buttons">
               <a href="" class="pop_up_view open_pop_up_video" data-youtube="lament">zobacz zwiastun</a>
             </div>
@@ -1014,72 +1014,72 @@
             <div class="movie_skin cont">
               <div class="demo-gallery">
                 <ul class="lightgallery">
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_2.jpg 375, ./img/gallery/ksk/curse_2.jpg 480, ./img/gallery/ksk/curse_2.jpg 800" data-src="./img/gallery/ksk/curse_2.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/01.jpg 375, ./img/gallery/lament/01.jpg 480, ./img/gallery/lament/01.jpg 800" data-src="./img/gallery/lament/01.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_2.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/01.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 2 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_3.jpg 375, ./img/gallery/ksk/curse_3.jpg 480, ./img/gallery/ksk/curse_3.jpg 800" data-src="./img/gallery/ksk/curse_3.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/02.jpg 375, ./img/gallery/lament/02.jpg 480, ./img/gallery/lament/02.jpg 800" data-src="./img/gallery/lament/03.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_3.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/02.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 3 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_4.jpg 375, ./img/gallery/ksk/curse_4.jpg 480, ./img/gallery/ksk/curse_4.jpg 800" data-src="./img/gallery/ksk/curse_4.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/03.jpg 375, ./img/gallery/lament/03.jpg 480, ./img/gallery/lament/03.jpg 800" data-src="./img/gallery/lament/03.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_4.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/03.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 4 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_5 375, ./img/gallery/ksk/curse_5.jpg 480, ./img/gallery/ksk/curse_5.jpg 800" data-src="./img/gallery/ksk/curse_5.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/04.jpg 375, ./img/gallery/lament/04.jpg 480, ./img/gallery/lament/04.jpg 800" data-src="./img/gallery/lament/04.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_5.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/04.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 5 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_6.jpeg 375, ./img/gallery/ksk/curse_6.jpeg 480, ./img/gallery/ksk/curse_6.jpeg 800" data-src="./img/gallery/ksk/curse_6.jpeg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/05.jpg 375, ./img/gallery/lament/05.jpg 480, ./img/gallery/lament/05.jpg 800" data-src="./img/gallery/lament/05.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_6.jpeg" />
+                      <img class="img-responsive" src="./img/gallery/lament/05.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 6 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_7.jpg 375, ./img/gallery/ksk/curse_7.jpg 480, ./img/gallery/ksk/curse_7.jpg 800" data-src="./img/gallery/ksk/curse_7.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/06.jpg 375, ./img/gallery/lament/06.jpg 480, ./img/gallery/lament/06.jpg 800" data-src="./img/gallery/lament/06.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_7.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/06.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 7 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_8.jpg 375, ./img/gallery/ksk/curse_8.jpg 480, ./img/gallery/ksk/curse_8.jpg 800" data-src="./img/gallery/ksk/curse_8.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/07.jpg 375, ./img/gallery/lament/07.jpg 480, ./img/gallery/lament/07.jpg 800" data-src="./img/gallery/lament/07.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_8.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/07.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
                     </a>
                   </li>
                   <!-- Atak 8 -->
-                  <li class="movie_skin_one" data-responsive="./img/gallery/ksk/curse_9.jpg 375, ./img/gallery/ksk/curse_9.jpg 480, ./img/gallery/ksk/curse_9.jpg 800" data-src="./img/gallery/ksk/curse_9.jpg">
+                  <li class="movie_skin_one" data-responsive="./img/gallery/lament/08.jpg 375, ./img/gallery/lament/08.jpg 480, ./img/gallery/lament/08.jpg 800" data-src="./img/gallery/lament/08.jpg">
                     <a href="">
-                      <img class="img-responsive" src="./img/gallery/ksk/curse_9.jpg" />
+                      <img class="img-responsive" src="./img/gallery/lament/08.jpg" />
                       <div class="demo-gallery-poster">
                         <img src="http://sachinchoolur.github.io/lightGallery/static/img/zoom.png" />
                       </div>
