--- a/public/index.html
+++ b/public/index.html
@@ -1222,13 +1222,13 @@
         <span class="bold">
           Filmy
         </span>
-        <li class="footer_point_one"><a href="#">Bodom</a></li>
-        <li class="footer_point_one"><a href="#">Amerykański burger</a></li>
-        <li class="footer_point_one"><a href="#">Klątwa Śpiącej Królewny</a></li>
-        <li class="footer_point_one"><a href="#">Atak krwiożerczych donatów</a></li>
-        <li class="footer_point_one"><a href="#">Pod mroczną górą</a></li>
-        <li class="footer_point_one"><a href="#">Pod mroczną górą</a></li>
-        <li class="footer_point_one"><a href="#">Lament</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="bodom">Bodom</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="am_burger">Amerykański burger</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="ksk">Klątwa Śpiącej Królewny</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="atak">Atak krwiożerczych donatów</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="side">Pod mroczną górą</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="zombie">Zombie express</a></li>
+        <li class="footer_point_one"><a href="#" data-popup-movie="lament">Lament</a></li>
       </ul>
       <!-- END Filmy -->
       <!-- Kina -->
