more movies "show more"

--- a/public/index.html
+++ b/public/index.html
@@ -1128,7 +1128,8 @@
   <!-- END Movies -->
   <!-- Cinemas -->
   <section class="cinema" id="cinema">
-    <div class="container">
+    <div class="show_more"></div>
+    <div class="container cinema_more cinema_gradient">
       <div class="movies_block blood_block top">
         <p class="bold">Kina</p>
       </div>
@@ -1172,6 +1173,123 @@
         </div>
         <div class="separator"></div>
       </div>
+      <!-- Biała Podlaska -->
+      <div class="cinema_city">
+        <p class="red bold">Biała Podlaska</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Biała Podlaska -->
+      <!-- Głogów -->
+      <div class="cinema_city">
+        <p class="red bold">Głogów</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Głogów -->
+      <!-- Kalisz -->
+      <div class="cinema_city">
+        <p class="red bold">Kalisz</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Kalisz -->
+      <!-- Świdnica -->
+      <div class="cinema_city">
+        <p class="red bold">Świdnica</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Świdnica -->
+      <!-- Świnoujście -->
+      <div class="cinema_city">
+        <p class="red bold">Świnoujście</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Świnoujście -->
+      <!-- Gdańsk -->
+      <div class="cinema_city">
+        <p class="red bold">Gdańsk</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Gdańsk -->
+      <!-- Tarnów -->
+      <div class="cinema_city">
+        <p class="red bold">Tarnów</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Tarnów -->
+      <!-- Kłodzko -->
+      <div class="cinema_city">
+        <p class="red bold">Kłodzko</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Kłodzko -->
+      <!-- Leszno -->
+      <div class="cinema_city">
+        <p class="red bold">Leszno</p>
+        <div class="cinema_shot">
+          <p class="cinema_shot_name">Cinema 3D</p>
+          <p class="cinema_shot_date">24/02/2017 (maraton: Lament, Bodom, Aplikacja)</p>
+          <a href="http://wck.wadowice.pl" target="_blank" >
+            <img class="cinema_shot_img" src="./img/cinemas/cinema.png" alt="Wadowickie Centrum Kultury" role="presentation" />
+          </a>
+        </div>
+        <div class="separator"></div>
+      </div>
+      <!-- End Leszno -->
     </div>
   </section>
   <!-- END Cinemas -->
