--- a/public/index.html
+++ b/public/index.html
@@ -60,13 +60,41 @@
 </header>
 <main>
   <div id="sync1" class="owl-carousel owl-theme">
-    <div class="item am_burger"><p class="container-text bold writing" data-text="Amerykański burger">Amerykański burger</p></div>
-    <div class="item bodom"><p class="container-text bold writing" data-text="bodom">Bodom</p></div>
-    <div class="item express"><p class="container-text bold writing" data-text="Zombie express">Zombie express</p></div>
-    <div class="item klatwa"><p class="container-text bold writing" data-text="Klątwa Śpiącek Królewny">Klątwa Śpiącej Królewny</p></div>
-    <div class="item atak"><p class="container-text bold writing" data-text="Atak krwiożerczych donatów">Atak krwiożerczych donatów</p></div>
-    <div class="item side"><p class="container-text bold writing" data-text="Pod mroczną górą">Pod mroczną górą</p></div>
-    <div class="item lament"><p class="container-text bold writing" data-text="Lament">Lament</p></div>
+    <div class="item am_burger">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="Amerykański burger">Amerykański burger</p>
+      </div>
+    </div>
+    <div class="item bodom">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="bodom">Bodom</p>
+      </div>
+    </div>
+    <div class="item express">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="Zombie express">Zombie express</p>
+      </div>
+    </div>
+    <div class="item klatwa">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="Klątwa Śpiącek Królewny">Klątwa Śpiącej Królewny</p>
+      </div>
+    </div>
+    <div class="item atak">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="Atak krwiożerczych donatów">Atak krwiożerczych donatów</p>
+      </div>
+    </div>
+    <div class="item side">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="Pod mroczną górą">Pod mroczną górą</p>
+      </div>
+    </div>
+    <div class="item lament">
+      <div class="cinema-box-word">
+        <p class="container-text bold writing" data-text="Lament">Lament</p>
+      </div>
+    </div>
   </div>
 
   <div id="sync2" class="owl-carousel owl-theme">
