--- a/public/index.html
+++ b/public/index.html
@@ -172,7 +172,7 @@
           <span class="about_movies">
             <span class="red bold">Amerykański burger</span> (2014) reż. Johan Bromander, Bonita Darke | Szwecja</span>
           <span class="about_movies">
-            <span class="red bold">Klątwa Śpiącek Królewny</span> (2016) reż. Peary Reginaldo Teo | USA</span>
+            <span class="red bold">Klątwa Śpiącej Królewny</span> (2016) reż. Peary Reginaldo Teo | USA</span>
           <span class="about_movies">
             <span class="red bold">Atak krwiożerczych donatów</span> (2016) reż. Scott Wheeler | USA</span>
           <span class="about_movies">
